crates/rome_formatter/tests/specs/prettier/js/babel-plugins/decorators.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 121
expression: decorators.js

---
# Input
```js
// https://babeljs.io/docs/en/babel-plugin-proposal-decorators

@annotation
class MyClass { }

function annotation(target) {
   target.annotated = true;
}

@isTestable(true)
class MyClass { }

function isTestable(value) {
   return function decorator(target) {
      target.isTestable = value;
   }
}

class C {
  @enumerable(false)
  method() { }
}

function enumerable(value) {
  return function (target, key, descriptor) {
     descriptor.enumerable = value;
     return descriptor;
  }
}

```

# Output
```js
// https://babeljs.io/docs/en/babel-plugin-proposal-decorators

@annotation
class MyClass {}

function annotation(target) {
  target.annotated = true;
}



@isTestable(true)
class MyClass {}

function isTestable(value) {
  return function decorator(target) {
    target.isTestable = value;
  };
}

class C {
  @enumerable(false)
  method() { }
}

function enumerable(value) {
  return function (target, key, descriptor) {
    descriptor.enumerable = value;
    return descriptor;
  };
}

```

# Errors
```
error[SyntaxError]: expected a statement but instead found '@annotation'
  ┌─ decorators.js:3:1
  │
3 │ @annotation
  │ ^^^^^^^^^^^ Expected a statement here

error[SyntaxError]: expected a statement but instead found '@isTestable(true)'
   ┌─ decorators.js:10:1
   │
10 │ @isTestable(true)
   │ ^^^^^^^^^^^^^^^^^ Expected a statement here

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '@'
   ┌─ decorators.js:20:3
   │
20 │   @enumerable(false)
   │   ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a parameter but instead found 'false'
   ┌─ decorators.js:20:15
   │
20 │   @enumerable(false)
   │               ^^^^^ Expected a parameter here


```


